grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from core/lib-Orwell/Orwell/Grammar.y
-----------------------------------------------------------------------------

state 3 contains 1 shift/reduce conflicts.

rule 60 is unused

terminal Char is unused
terminal data is unused
terminal '{' is unused
terminal '}' is unused
terminal tycon is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseOrwell -> Program                      (0)
	%start_parseInteractiveOrwell -> Interactive       (1)
	Program -> DeclList MainExpr                       (2)
	MainExpr -> Newlines Expr Newlines                 (3)
	MainExpr ->                                        (4)
	Newlines -> '\n' Newlines                          (5)
	Newlines ->                                        (6)
	Interactive -> Expr                                (7)
	Interactive -> var "::" TypeExp '=' Expr           (8)
	DeclList -> DeclList Decl                          (9)
	DeclList ->                                        (10)
	Decl -> DeclSingle '\n'                            (11)
	Decl -> DeclFull '\n'                              (12)
	DeclSingle -> DeclVar "::" TypeExp '=' Expr        (13)
	DeclFull -> DeclVar "::" TypeExp '\n' var '=' Expr   (14)
	DeclVar -> var                                     (15)
	Expr -> let var '=' Expr in Expr                   (16)
	Expr -> letrec var '=' Expr in Expr                (17)
	Expr -> '(' '\\' var "->" Expr ')' "::" TypeExp "->" TypeExp   (18)
	Expr -> if Expr then Expr else Expr                (19)
	Expr -> Expr "==" Expr                             (20)
	Expr -> Expr ">=" Expr                             (21)
	Expr -> Expr "<=" Expr                             (22)
	Expr -> Expr "/=" Expr                             (23)
	Expr -> Expr '>' Expr                              (24)
	Expr -> Expr '<' Expr                              (25)
	Expr -> Expr "&&" Expr                             (26)
	Expr -> Expr "||" Expr                             (27)
	Expr -> Expr ':' Expr                              (28)
	Expr -> Expr "++" Expr                             (29)
	Expr -> hd Expr                                    (30)
	Expr -> tl Expr                                    (31)
	Expr -> List                                       (32)
	Expr -> Form                                       (33)
	Form -> Form '+' Form                              (34)
	Form -> Form '-' Form                              (35)
	Form -> Form '*' Form                              (36)
	Form -> Form '/' Form                              (37)
	Form -> Form '^' Form                              (38)
	Form -> Juxt                                       (39)
	Juxt -> Juxt Atom                                  (40)
	Juxt -> Atom                                       (41)
	Atom -> int                                        (42)
	Atom -> bool                                       (43)
	Atom -> float                                      (44)
	Atom -> char                                       (45)
	Atom -> var                                        (46)
	Atom -> '(' Expr ')'                               (47)
	TypeExp -> PrimType                                (48)
	TypeExp -> TypeExp "->" TypeExp                    (49)
	TypeExp -> '(' TypeExp ')'                         (50)
	TypeExp -> '[' TypeExp ']'                         (51)
	TypeExp -> '[' ']'                                 (52)
	PrimType -> Bool                                   (53)
	PrimType -> Int                                    (54)
	PrimType -> Float                                  (55)
	List -> '[' ListMembers ']'                        (56)
	ListMembers ->                                     (57)
	ListMembers -> Atom                                (58)
	ListMembers -> ListMembers ',' Atom                (59)
	RecordTypeFields ->                                (60)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	Int            { T_Int p }
	Bool           { BOOL p }
	Float          { FLOAT p }
	Char           { CHAR p }
	int            { INTVAL p $$ }
	float          { FLOATVAL p $$ }
	bool           { BOOLVAL p $$ }
	char           { CHARVAL p $$ }
	let            { LET p }
	letrec         { LET_REC p }
	in             { IN p }
	if             { IF p }
	then           { THEN p }
	else           { ELSE p }
	data           { DATA p }
	'\\'           { LAMBDA p }
	"->"           { ARROW p }
	"::"           { COLONS p }
	"&&"           { AND p }
	"||"           { OR p }
	'='            { BIND p }
	'+'            { PLUS p }
	'-'            { MINUS p }
	'*'            { TIMES p }
	'/'            { DIVIDE p }
	'^'            { POWER p }
	"=="           { EQUALS p }
	">="           { GTEQ p }
	"<="           { LTEQ p }
	"/="           { NOTEQ p }
	'>'            { GT' p }
	'<'            { LT' p }
	'('            { LPAREN p }
	')'            { RPAREN p }
	'{'            { LCURL p }
	'}'            { RCURL p }
	var            { VAR p $$ }
	'['            { LBRACK p }
	']'            { RBRACK p }
	':'            { COLON p }
	','            { COMMA p }
	"++"           { PLUSPLUS p }
	hd             { HEAD p }
	tl             { TAIL p }
	tycon          { TYCON p $$ }
	'\n'           { T_Newline p }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseOrwell rule  0
	%start_parseInteractiveOrwell rule  1
	Program         rule  2
	MainExpr        rules 3, 4
	Newlines        rules 5, 6
	Interactive     rules 7, 8
	DeclList        rules 9, 10
	Decl            rules 11, 12
	DeclSingle      rule  13
	DeclFull        rule  14
	DeclVar         rule  15
	Expr            rules 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33
	Form            rules 34, 35, 36, 37, 38, 39
	Juxt            rules 40, 41
	Atom            rules 42, 43, 44, 45, 46, 47
	TypeExp         rules 48, 49, 50, 51, 52
	PrimType        rules 53, 54, 55
	List            rule  56
	ListMembers     rules 57, 58, 59
	RecordTypeFields rule  60

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseOrwell -> . Program                     (rule 0)

	int            reduce using rule 10
	float          reduce using rule 10
	bool           reduce using rule 10
	char           reduce using rule 10
	let            reduce using rule 10
	letrec         reduce using rule 10
	if             reduce using rule 10
	'('            reduce using rule 10
	var            reduce using rule 10
	'['            reduce using rule 10
	hd             reduce using rule 10
	tl             reduce using rule 10
	'\n'           reduce using rule 10
	%eof           reduce using rule 10

	Program        goto state 22
	DeclList       goto state 3

State 1

	%start_parseInteractiveOrwell -> . Interactive      (rule 1)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	let            shift, and enter state 14
	letrec         shift, and enter state 15
	if             shift, and enter state 16
	'('            shift, and enter state 17
	var            shift, and enter state 18
	'['            shift, and enter state 19
	hd             shift, and enter state 20
	tl             shift, and enter state 21

	Interactive    goto state 4
	Expr           goto state 5
	Form           goto state 6
	Juxt           goto state 7
	Atom           goto state 8
	List           goto state 9

State 2

	Program -> . DeclList MainExpr                      (rule 2)


	DeclList       goto state 3

State 3

	Program -> DeclList . MainExpr                      (rule 2)
	DeclList -> DeclList . Decl                         (rule 9)

	int            reduce using rule 6
	float          reduce using rule 6
	bool           reduce using rule 6
	char           reduce using rule 6
	let            reduce using rule 6
	letrec         reduce using rule 6
	if             reduce using rule 6
	'('            reduce using rule 6
	var            shift, and enter state 57
			(reduce using rule 6)

	'['            reduce using rule 6
	hd             reduce using rule 6
	tl             reduce using rule 6
	'\n'           shift, and enter state 58
	%eof           reduce using rule 4

	MainExpr       goto state 51
	Newlines       goto state 52
	Decl           goto state 53
	DeclSingle     goto state 54
	DeclFull       goto state 55
	DeclVar        goto state 56

State 4

	%start_parseInteractiveOrwell -> Interactive .      (rule 1)

	%eof           accept


State 5

	Interactive -> Expr .                               (rule 7)
	Expr -> Expr . "==" Expr                            (rule 20)
	Expr -> Expr . ">=" Expr                            (rule 21)
	Expr -> Expr . "<=" Expr                            (rule 22)
	Expr -> Expr . "/=" Expr                            (rule 23)
	Expr -> Expr . '>' Expr                             (rule 24)
	Expr -> Expr . '<' Expr                             (rule 25)
	Expr -> Expr . "&&" Expr                            (rule 26)
	Expr -> Expr . "||" Expr                            (rule 27)
	Expr -> Expr . ':' Expr                             (rule 28)
	Expr -> Expr . "++" Expr                            (rule 29)

	"&&"           shift, and enter state 41
	"||"           shift, and enter state 42
	"=="           shift, and enter state 43
	">="           shift, and enter state 44
	"<="           shift, and enter state 45
	"/="           shift, and enter state 46
	'>'            shift, and enter state 47
	'<'            shift, and enter state 48
	':'            shift, and enter state 49
	"++"           shift, and enter state 50
	%eof           reduce using rule 7


State 6

	Expr -> Form .                                      (rule 33)
	Form -> Form . '+' Form                             (rule 34)
	Form -> Form . '-' Form                             (rule 35)
	Form -> Form . '*' Form                             (rule 36)
	Form -> Form . '/' Form                             (rule 37)
	Form -> Form . '^' Form                             (rule 38)

	in             reduce using rule 33
	then           reduce using rule 33
	else           reduce using rule 33
	"&&"           reduce using rule 33
	"||"           reduce using rule 33
	'+'            shift, and enter state 36
	'-'            shift, and enter state 37
	'*'            shift, and enter state 38
	'/'            shift, and enter state 39
	'^'            shift, and enter state 40
	"=="           reduce using rule 33
	">="           reduce using rule 33
	"<="           reduce using rule 33
	"/="           reduce using rule 33
	'>'            reduce using rule 33
	'<'            reduce using rule 33
	')'            reduce using rule 33
	':'            reduce using rule 33
	"++"           reduce using rule 33
	'\n'           reduce using rule 33
	%eof           reduce using rule 33


State 7

	Form -> Juxt .                                      (rule 39)
	Juxt -> Juxt . Atom                                 (rule 40)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	in             reduce using rule 39
	then           reduce using rule 39
	else           reduce using rule 39
	"&&"           reduce using rule 39
	"||"           reduce using rule 39
	'+'            reduce using rule 39
	'-'            reduce using rule 39
	'*'            reduce using rule 39
	'/'            reduce using rule 39
	'^'            reduce using rule 39
	"=="           reduce using rule 39
	">="           reduce using rule 39
	"<="           reduce using rule 39
	"/="           reduce using rule 39
	'>'            reduce using rule 39
	'<'            reduce using rule 39
	'('            shift, and enter state 28
	')'            reduce using rule 39
	var            shift, and enter state 24
	':'            reduce using rule 39
	"++"           reduce using rule 39
	'\n'           reduce using rule 39
	%eof           reduce using rule 39

	Atom           goto state 35

State 8

	Juxt -> Atom .                                      (rule 41)

	int            reduce using rule 41
	float          reduce using rule 41
	bool           reduce using rule 41
	char           reduce using rule 41
	in             reduce using rule 41
	then           reduce using rule 41
	else           reduce using rule 41
	"&&"           reduce using rule 41
	"||"           reduce using rule 41
	'+'            reduce using rule 41
	'-'            reduce using rule 41
	'*'            reduce using rule 41
	'/'            reduce using rule 41
	'^'            reduce using rule 41
	"=="           reduce using rule 41
	">="           reduce using rule 41
	"<="           reduce using rule 41
	"/="           reduce using rule 41
	'>'            reduce using rule 41
	'<'            reduce using rule 41
	'('            reduce using rule 41
	')'            reduce using rule 41
	var            reduce using rule 41
	':'            reduce using rule 41
	"++"           reduce using rule 41
	'\n'           reduce using rule 41
	%eof           reduce using rule 41


State 9

	Expr -> List .                                      (rule 32)

	in             reduce using rule 32
	then           reduce using rule 32
	else           reduce using rule 32
	"&&"           reduce using rule 32
	"||"           reduce using rule 32
	"=="           reduce using rule 32
	">="           reduce using rule 32
	"<="           reduce using rule 32
	"/="           reduce using rule 32
	'>'            reduce using rule 32
	'<'            reduce using rule 32
	')'            reduce using rule 32
	':'            reduce using rule 32
	"++"           reduce using rule 32
	'\n'           reduce using rule 32
	%eof           reduce using rule 32


State 10

	Atom -> int .                                       (rule 42)

	int            reduce using rule 42
	float          reduce using rule 42
	bool           reduce using rule 42
	char           reduce using rule 42
	in             reduce using rule 42
	then           reduce using rule 42
	else           reduce using rule 42
	"&&"           reduce using rule 42
	"||"           reduce using rule 42
	'+'            reduce using rule 42
	'-'            reduce using rule 42
	'*'            reduce using rule 42
	'/'            reduce using rule 42
	'^'            reduce using rule 42
	"=="           reduce using rule 42
	">="           reduce using rule 42
	"<="           reduce using rule 42
	"/="           reduce using rule 42
	'>'            reduce using rule 42
	'<'            reduce using rule 42
	'('            reduce using rule 42
	')'            reduce using rule 42
	var            reduce using rule 42
	']'            reduce using rule 42
	':'            reduce using rule 42
	','            reduce using rule 42
	"++"           reduce using rule 42
	'\n'           reduce using rule 42
	%eof           reduce using rule 42


State 11

	Atom -> float .                                     (rule 44)

	int            reduce using rule 44
	float          reduce using rule 44
	bool           reduce using rule 44
	char           reduce using rule 44
	in             reduce using rule 44
	then           reduce using rule 44
	else           reduce using rule 44
	"&&"           reduce using rule 44
	"||"           reduce using rule 44
	'+'            reduce using rule 44
	'-'            reduce using rule 44
	'*'            reduce using rule 44
	'/'            reduce using rule 44
	'^'            reduce using rule 44
	"=="           reduce using rule 44
	">="           reduce using rule 44
	"<="           reduce using rule 44
	"/="           reduce using rule 44
	'>'            reduce using rule 44
	'<'            reduce using rule 44
	'('            reduce using rule 44
	')'            reduce using rule 44
	var            reduce using rule 44
	']'            reduce using rule 44
	':'            reduce using rule 44
	','            reduce using rule 44
	"++"           reduce using rule 44
	'\n'           reduce using rule 44
	%eof           reduce using rule 44


State 12

	Atom -> bool .                                      (rule 43)

	int            reduce using rule 43
	float          reduce using rule 43
	bool           reduce using rule 43
	char           reduce using rule 43
	in             reduce using rule 43
	then           reduce using rule 43
	else           reduce using rule 43
	"&&"           reduce using rule 43
	"||"           reduce using rule 43
	'+'            reduce using rule 43
	'-'            reduce using rule 43
	'*'            reduce using rule 43
	'/'            reduce using rule 43
	'^'            reduce using rule 43
	"=="           reduce using rule 43
	">="           reduce using rule 43
	"<="           reduce using rule 43
	"/="           reduce using rule 43
	'>'            reduce using rule 43
	'<'            reduce using rule 43
	'('            reduce using rule 43
	')'            reduce using rule 43
	var            reduce using rule 43
	']'            reduce using rule 43
	':'            reduce using rule 43
	','            reduce using rule 43
	"++"           reduce using rule 43
	'\n'           reduce using rule 43
	%eof           reduce using rule 43


State 13

	Atom -> char .                                      (rule 45)

	int            reduce using rule 45
	float          reduce using rule 45
	bool           reduce using rule 45
	char           reduce using rule 45
	in             reduce using rule 45
	then           reduce using rule 45
	else           reduce using rule 45
	"&&"           reduce using rule 45
	"||"           reduce using rule 45
	'+'            reduce using rule 45
	'-'            reduce using rule 45
	'*'            reduce using rule 45
	'/'            reduce using rule 45
	'^'            reduce using rule 45
	"=="           reduce using rule 45
	">="           reduce using rule 45
	"<="           reduce using rule 45
	"/="           reduce using rule 45
	'>'            reduce using rule 45
	'<'            reduce using rule 45
	'('            reduce using rule 45
	')'            reduce using rule 45
	var            reduce using rule 45
	']'            reduce using rule 45
	':'            reduce using rule 45
	','            reduce using rule 45
	"++"           reduce using rule 45
	'\n'           reduce using rule 45
	%eof           reduce using rule 45


State 14

	Expr -> let . var '=' Expr in Expr                  (rule 16)

	var            shift, and enter state 34


State 15

	Expr -> letrec . var '=' Expr in Expr               (rule 17)

	var            shift, and enter state 33


State 16

	Expr -> if . Expr then Expr else Expr               (rule 19)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	let            shift, and enter state 14
	letrec         shift, and enter state 15
	if             shift, and enter state 16
	'('            shift, and enter state 17
	var            shift, and enter state 24
	'['            shift, and enter state 19
	hd             shift, and enter state 20
	tl             shift, and enter state 21

	Expr           goto state 32
	Form           goto state 6
	Juxt           goto state 7
	Atom           goto state 8
	List           goto state 9

State 17

	Expr -> '(' . '\\' var "->" Expr ')' "::" TypeExp "->" TypeExp    (rule 18)
	Atom -> '(' . Expr ')'                              (rule 47)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	let            shift, and enter state 14
	letrec         shift, and enter state 15
	if             shift, and enter state 16
	'\\'           shift, and enter state 31
	'('            shift, and enter state 17
	var            shift, and enter state 24
	'['            shift, and enter state 19
	hd             shift, and enter state 20
	tl             shift, and enter state 21

	Expr           goto state 30
	Form           goto state 6
	Juxt           goto state 7
	Atom           goto state 8
	List           goto state 9

State 18

	Interactive -> var . "::" TypeExp '=' Expr          (rule 8)
	Atom -> var .                                       (rule 46)

	int            reduce using rule 46
	float          reduce using rule 46
	bool           reduce using rule 46
	char           reduce using rule 46
	"::"           shift, and enter state 29
	"&&"           reduce using rule 46
	"||"           reduce using rule 46
	'+'            reduce using rule 46
	'-'            reduce using rule 46
	'*'            reduce using rule 46
	'/'            reduce using rule 46
	'^'            reduce using rule 46
	"=="           reduce using rule 46
	">="           reduce using rule 46
	"<="           reduce using rule 46
	"/="           reduce using rule 46
	'>'            reduce using rule 46
	'<'            reduce using rule 46
	'('            reduce using rule 46
	var            reduce using rule 46
	':'            reduce using rule 46
	"++"           reduce using rule 46
	%eof           reduce using rule 46


State 19

	List -> '[' . ListMembers ']'                       (rule 56)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	'('            shift, and enter state 28
	var            shift, and enter state 24
	']'            reduce using rule 57
	','            reduce using rule 57

	Atom           goto state 26
	ListMembers    goto state 27

State 20

	Expr -> hd . Expr                                   (rule 30)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	let            shift, and enter state 14
	letrec         shift, and enter state 15
	if             shift, and enter state 16
	'('            shift, and enter state 17
	var            shift, and enter state 24
	'['            shift, and enter state 19
	hd             shift, and enter state 20
	tl             shift, and enter state 21

	Expr           goto state 25
	Form           goto state 6
	Juxt           goto state 7
	Atom           goto state 8
	List           goto state 9

State 21

	Expr -> tl . Expr                                   (rule 31)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	let            shift, and enter state 14
	letrec         shift, and enter state 15
	if             shift, and enter state 16
	'('            shift, and enter state 17
	var            shift, and enter state 24
	'['            shift, and enter state 19
	hd             shift, and enter state 20
	tl             shift, and enter state 21

	Expr           goto state 23
	Form           goto state 6
	Juxt           goto state 7
	Atom           goto state 8
	List           goto state 9

State 22

	%start_parseOrwell -> Program .                     (rule 0)

	%eof           accept


State 23

	Expr -> Expr . "==" Expr                            (rule 20)
	Expr -> Expr . ">=" Expr                            (rule 21)
	Expr -> Expr . "<=" Expr                            (rule 22)
	Expr -> Expr . "/=" Expr                            (rule 23)
	Expr -> Expr . '>' Expr                             (rule 24)
	Expr -> Expr . '<' Expr                             (rule 25)
	Expr -> Expr . "&&" Expr                            (rule 26)
	Expr -> Expr . "||" Expr                            (rule 27)
	Expr -> Expr . ':' Expr                             (rule 28)
	Expr -> Expr . "++" Expr                            (rule 29)
	Expr -> tl Expr .                                   (rule 31)

	in             reduce using rule 31
	then           reduce using rule 31
	else           reduce using rule 31
	"&&"           shift, and enter state 41
	"||"           shift, and enter state 42
	"=="           shift, and enter state 43
	">="           shift, and enter state 44
	"<="           shift, and enter state 45
	"/="           shift, and enter state 46
	'>'            shift, and enter state 47
	'<'            shift, and enter state 48
	')'            reduce using rule 31
	':'            shift, and enter state 49
	"++"           shift, and enter state 50
	'\n'           reduce using rule 31
	%eof           reduce using rule 31


State 24

	Atom -> var .                                       (rule 46)

	int            reduce using rule 46
	float          reduce using rule 46
	bool           reduce using rule 46
	char           reduce using rule 46
	in             reduce using rule 46
	then           reduce using rule 46
	else           reduce using rule 46
	"&&"           reduce using rule 46
	"||"           reduce using rule 46
	'+'            reduce using rule 46
	'-'            reduce using rule 46
	'*'            reduce using rule 46
	'/'            reduce using rule 46
	'^'            reduce using rule 46
	"=="           reduce using rule 46
	">="           reduce using rule 46
	"<="           reduce using rule 46
	"/="           reduce using rule 46
	'>'            reduce using rule 46
	'<'            reduce using rule 46
	'('            reduce using rule 46
	')'            reduce using rule 46
	var            reduce using rule 46
	']'            reduce using rule 46
	':'            reduce using rule 46
	','            reduce using rule 46
	"++"           reduce using rule 46
	'\n'           reduce using rule 46
	%eof           reduce using rule 46


State 25

	Expr -> Expr . "==" Expr                            (rule 20)
	Expr -> Expr . ">=" Expr                            (rule 21)
	Expr -> Expr . "<=" Expr                            (rule 22)
	Expr -> Expr . "/=" Expr                            (rule 23)
	Expr -> Expr . '>' Expr                             (rule 24)
	Expr -> Expr . '<' Expr                             (rule 25)
	Expr -> Expr . "&&" Expr                            (rule 26)
	Expr -> Expr . "||" Expr                            (rule 27)
	Expr -> Expr . ':' Expr                             (rule 28)
	Expr -> Expr . "++" Expr                            (rule 29)
	Expr -> hd Expr .                                   (rule 30)

	in             reduce using rule 30
	then           reduce using rule 30
	else           reduce using rule 30
	"&&"           shift, and enter state 41
	"||"           shift, and enter state 42
	"=="           shift, and enter state 43
	">="           shift, and enter state 44
	"<="           shift, and enter state 45
	"/="           shift, and enter state 46
	'>'            shift, and enter state 47
	'<'            shift, and enter state 48
	')'            reduce using rule 30
	':'            shift, and enter state 49
	"++"           shift, and enter state 50
	'\n'           reduce using rule 30
	%eof           reduce using rule 30


State 26

	ListMembers -> Atom .                               (rule 58)

	']'            reduce using rule 58
	','            reduce using rule 58


State 27

	List -> '[' ListMembers . ']'                       (rule 56)
	ListMembers -> ListMembers . ',' Atom               (rule 59)

	']'            shift, and enter state 91
	','            shift, and enter state 92


State 28

	Atom -> '(' . Expr ')'                              (rule 47)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	let            shift, and enter state 14
	letrec         shift, and enter state 15
	if             shift, and enter state 16
	'('            shift, and enter state 17
	var            shift, and enter state 24
	'['            shift, and enter state 19
	hd             shift, and enter state 20
	tl             shift, and enter state 21

	Expr           goto state 30
	Form           goto state 6
	Juxt           goto state 7
	Atom           goto state 8
	List           goto state 9

State 29

	Interactive -> var "::" . TypeExp '=' Expr          (rule 8)

	Int            shift, and enter state 86
	Bool           shift, and enter state 87
	Float          shift, and enter state 88
	'('            shift, and enter state 89
	'['            shift, and enter state 90

	TypeExp        goto state 84
	PrimType       goto state 85

State 30

	Expr -> Expr . "==" Expr                            (rule 20)
	Expr -> Expr . ">=" Expr                            (rule 21)
	Expr -> Expr . "<=" Expr                            (rule 22)
	Expr -> Expr . "/=" Expr                            (rule 23)
	Expr -> Expr . '>' Expr                             (rule 24)
	Expr -> Expr . '<' Expr                             (rule 25)
	Expr -> Expr . "&&" Expr                            (rule 26)
	Expr -> Expr . "||" Expr                            (rule 27)
	Expr -> Expr . ':' Expr                             (rule 28)
	Expr -> Expr . "++" Expr                            (rule 29)
	Atom -> '(' Expr . ')'                              (rule 47)

	"&&"           shift, and enter state 41
	"||"           shift, and enter state 42
	"=="           shift, and enter state 43
	">="           shift, and enter state 44
	"<="           shift, and enter state 45
	"/="           shift, and enter state 46
	'>'            shift, and enter state 47
	'<'            shift, and enter state 48
	')'            shift, and enter state 83
	':'            shift, and enter state 49
	"++"           shift, and enter state 50


State 31

	Expr -> '(' '\\' . var "->" Expr ')' "::" TypeExp "->" TypeExp    (rule 18)

	var            shift, and enter state 82


State 32

	Expr -> if Expr . then Expr else Expr               (rule 19)
	Expr -> Expr . "==" Expr                            (rule 20)
	Expr -> Expr . ">=" Expr                            (rule 21)
	Expr -> Expr . "<=" Expr                            (rule 22)
	Expr -> Expr . "/=" Expr                            (rule 23)
	Expr -> Expr . '>' Expr                             (rule 24)
	Expr -> Expr . '<' Expr                             (rule 25)
	Expr -> Expr . "&&" Expr                            (rule 26)
	Expr -> Expr . "||" Expr                            (rule 27)
	Expr -> Expr . ':' Expr                             (rule 28)
	Expr -> Expr . "++" Expr                            (rule 29)

	then           shift, and enter state 81
	"&&"           shift, and enter state 41
	"||"           shift, and enter state 42
	"=="           shift, and enter state 43
	">="           shift, and enter state 44
	"<="           shift, and enter state 45
	"/="           shift, and enter state 46
	'>'            shift, and enter state 47
	'<'            shift, and enter state 48
	':'            shift, and enter state 49
	"++"           shift, and enter state 50


State 33

	Expr -> letrec var . '=' Expr in Expr               (rule 17)

	'='            shift, and enter state 80


State 34

	Expr -> let var . '=' Expr in Expr                  (rule 16)

	'='            shift, and enter state 79


State 35

	Juxt -> Juxt Atom .                                 (rule 40)

	int            reduce using rule 40
	float          reduce using rule 40
	bool           reduce using rule 40
	char           reduce using rule 40
	in             reduce using rule 40
	then           reduce using rule 40
	else           reduce using rule 40
	"&&"           reduce using rule 40
	"||"           reduce using rule 40
	'+'            reduce using rule 40
	'-'            reduce using rule 40
	'*'            reduce using rule 40
	'/'            reduce using rule 40
	'^'            reduce using rule 40
	"=="           reduce using rule 40
	">="           reduce using rule 40
	"<="           reduce using rule 40
	"/="           reduce using rule 40
	'>'            reduce using rule 40
	'<'            reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	var            reduce using rule 40
	':'            reduce using rule 40
	"++"           reduce using rule 40
	'\n'           reduce using rule 40
	%eof           reduce using rule 40


State 36

	Form -> Form '+' . Form                             (rule 34)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	'('            shift, and enter state 28
	var            shift, and enter state 24

	Form           goto state 78
	Juxt           goto state 7
	Atom           goto state 8

State 37

	Form -> Form '-' . Form                             (rule 35)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	'('            shift, and enter state 28
	var            shift, and enter state 24

	Form           goto state 77
	Juxt           goto state 7
	Atom           goto state 8

State 38

	Form -> Form '*' . Form                             (rule 36)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	'('            shift, and enter state 28
	var            shift, and enter state 24

	Form           goto state 76
	Juxt           goto state 7
	Atom           goto state 8

State 39

	Form -> Form '/' . Form                             (rule 37)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	'('            shift, and enter state 28
	var            shift, and enter state 24

	Form           goto state 75
	Juxt           goto state 7
	Atom           goto state 8

State 40

	Form -> Form '^' . Form                             (rule 38)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	'('            shift, and enter state 28
	var            shift, and enter state 24

	Form           goto state 74
	Juxt           goto state 7
	Atom           goto state 8

State 41

	Expr -> Expr "&&" . Expr                            (rule 26)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	let            shift, and enter state 14
	letrec         shift, and enter state 15
	if             shift, and enter state 16
	'('            shift, and enter state 17
	var            shift, and enter state 24
	'['            shift, and enter state 19
	hd             shift, and enter state 20
	tl             shift, and enter state 21

	Expr           goto state 73
	Form           goto state 6
	Juxt           goto state 7
	Atom           goto state 8
	List           goto state 9

State 42

	Expr -> Expr "||" . Expr                            (rule 27)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	let            shift, and enter state 14
	letrec         shift, and enter state 15
	if             shift, and enter state 16
	'('            shift, and enter state 17
	var            shift, and enter state 24
	'['            shift, and enter state 19
	hd             shift, and enter state 20
	tl             shift, and enter state 21

	Expr           goto state 72
	Form           goto state 6
	Juxt           goto state 7
	Atom           goto state 8
	List           goto state 9

State 43

	Expr -> Expr "==" . Expr                            (rule 20)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	let            shift, and enter state 14
	letrec         shift, and enter state 15
	if             shift, and enter state 16
	'('            shift, and enter state 17
	var            shift, and enter state 24
	'['            shift, and enter state 19
	hd             shift, and enter state 20
	tl             shift, and enter state 21

	Expr           goto state 71
	Form           goto state 6
	Juxt           goto state 7
	Atom           goto state 8
	List           goto state 9

State 44

	Expr -> Expr ">=" . Expr                            (rule 21)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	let            shift, and enter state 14
	letrec         shift, and enter state 15
	if             shift, and enter state 16
	'('            shift, and enter state 17
	var            shift, and enter state 24
	'['            shift, and enter state 19
	hd             shift, and enter state 20
	tl             shift, and enter state 21

	Expr           goto state 70
	Form           goto state 6
	Juxt           goto state 7
	Atom           goto state 8
	List           goto state 9

State 45

	Expr -> Expr "<=" . Expr                            (rule 22)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	let            shift, and enter state 14
	letrec         shift, and enter state 15
	if             shift, and enter state 16
	'('            shift, and enter state 17
	var            shift, and enter state 24
	'['            shift, and enter state 19
	hd             shift, and enter state 20
	tl             shift, and enter state 21

	Expr           goto state 69
	Form           goto state 6
	Juxt           goto state 7
	Atom           goto state 8
	List           goto state 9

State 46

	Expr -> Expr "/=" . Expr                            (rule 23)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	let            shift, and enter state 14
	letrec         shift, and enter state 15
	if             shift, and enter state 16
	'('            shift, and enter state 17
	var            shift, and enter state 24
	'['            shift, and enter state 19
	hd             shift, and enter state 20
	tl             shift, and enter state 21

	Expr           goto state 68
	Form           goto state 6
	Juxt           goto state 7
	Atom           goto state 8
	List           goto state 9

State 47

	Expr -> Expr '>' . Expr                             (rule 24)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	let            shift, and enter state 14
	letrec         shift, and enter state 15
	if             shift, and enter state 16
	'('            shift, and enter state 17
	var            shift, and enter state 24
	'['            shift, and enter state 19
	hd             shift, and enter state 20
	tl             shift, and enter state 21

	Expr           goto state 67
	Form           goto state 6
	Juxt           goto state 7
	Atom           goto state 8
	List           goto state 9

State 48

	Expr -> Expr '<' . Expr                             (rule 25)

	int            shift, and enter state 10
	float          shift, and enter state 11
	bool           shift, and enter state 12
	char           shift, and enter state 13
	let            shift, and enter state 14
	letrec         shift, and enter state 15
	if             shift, and enter state 16
	'('            shift, and enter state 17
	var            shift, and enter state 24
	'['            shift, and enter state 19
	hd             shift, and enter state 20
	tl             shift, and enter state 21

	Expr           goto state 66
	Form           goto state 6
	Juxt           goto state 7
	Atom           goto state 8
	List           goto state 9

State 49
